# rust-bot

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/commands/: autocomplete.rs  mod.rs  ping.rs  register.rs  urbandict.rs
src/model/: mod.rs  urbandictionary.rs
