[package]
name = "rust-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.23"
tracing-subscriber = { version = "0.3.15", features = ["local-time", "ansi"] }
time = "0.2.25"
poise = "0.3.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"